--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -13,7 +13,7 @@ scopes = {
 	"currentGroup.DA949528" = "all"
 	"last_search.310DEAF1" = "t:scene DalgaKıra"
 	"OpenInspectorPreview.310DEAF1" = "0"
-	"currentGroup.310DEAF1" = "all"
+	"currentGroup.310DEAF1" = "asset"
 	"last_search.3BE40471" = "t:AudioSource"
 	"OpenInspectorPreview.3BE40471" = "0"
 	"currentGroup.3BE40471" = "all"
